--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "moment": "^2.20.1",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "pg-cursor": "^1.3.0"
   }
 }
