--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "JSONStream": "^1.3.2",
     "co": "^4.6.0",
     "moment": "^2.20.1",
     "pg": "^7.4.0",
-    "pg-cursor": "^1.3.0"
+    "pg-cursor": "^1.3.0",
+    "pg-query-stream": "^1.1.1"
   }
 }
